Add ZStatisticsInterval.